--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Michael DaSilva",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^2.0.0",
     "express": "^4.13.4",
-    "mongoose": "^4.3.7"
+    "mongodb": "^2.1.4",
+    "mongoose": "^4.3.7",
+    "shortid": "^2.2.4",
+    "validator": "^4.5.2"
   }
 }
